--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,19 @@
 </head>
 <body>
     <h1 th:text="'List Of Owners'">List of Owners...</h1>
+    <table>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        <tbody>
+            <tr th:each="owner : ${owners}">
+                <td th:text="${owner.id}">1</td>
+                <td th:text="${owner.firstName}">first name</td>
+                <td th:text="${owner.lastName}">last name</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
