--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,6 +5,21 @@
     <title>List Of Vets</title>
 </head>
 <body>
+<!--/*@thymeleafVar id=vet type="guru.springframework.sfgpetclinic.model.Vet*/-->
     <h1 th:text="'List Of Vets'">List OF Vets...</h1>
+    <table>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        <tbody>
+        <tr th:each="vet : ${vets}">
+            <td th:text="${vet.id}">1</td>
+            <td th:text="${vet.firstName}">first name</td>
+            <td th:text="${vet.lastName}">last name</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
